<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/recipeListbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Sort By"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortby_beer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortby_beer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner_unselected"
            android:gravity="center|center_vertical"
            android:text="@string/alcohol"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortby_desert"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortby_entree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner_unselected"
            android:gravity="center|center_vertical"
            android:text="@string/meal"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortby_side"
            app:layout_constraintStart_toEndOf="@+id/sortby_beverage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortby_beverage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner_unselected"
            android:gravity="center|center_vertical"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/beverage"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortby_entree"
            app:layout_constraintStart_toEndOf="@+id/sortby_desert"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortby_desert"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner_unselected"
            android:gravity="center|center_vertical"
            android:text="@string/desert"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/sortby_beverage"
            app:layout_constraintStart_toEndOf="@+id/sortby_beer"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortby_side"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner_unselected"
            android:gravity="center|center_vertical"
            android:text="@string/side"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sortby_entree"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>